# ai-stockoftheday

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/skills/add-signal/: SKILL.md
.claude/skills/add-ticker/: SKILL.md
.claude/skills/scan/: SKILL.md
.claude/skills/telegram-debug/: SKILL.md
src/stockoftheday/: cli.py  context.py  market_data.py  portfolio.py  report.py  schedule.py  signals.py  strategy.py  telegram.py  universe.py
tests/: test_market_data.py  test_portfolio.py  test_report.py  test_schedule.py  test_signals.py  test_strategy.py  test_universe.py
